<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="note"
            type="id.muhariananda.notemarks.data.entities.Note" />

        <variable
            name="viewModel"
            type="id.muhariananda.notemarks.ui.viewmodels.SharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.note.update.NoteUpdateFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_note_update"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/background"
                app:menu="@menu/menu_top_note_update"
                app:navigationIcon="@drawable/ic_arrow"
                app:navigationIconTint="@color/primary" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup_note_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_low_update"
                style="@style/ThemeOverlay.Notemarks.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="@{() -> viewModel.setPriority(1)}"
                android:text="@string/text_low_priority" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_medium_update"
                style="@style/ThemeOverlay.Notemarks.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.setPriority(2)}"
                android:text="@string/text_medium_priority" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_high_update"
                style="@style/ThemeOverlay.Notemarks.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.setPriority(3)}"
                android:text="@string/text_high_priority" />
        </com.google.android.material.chip.ChipGroup>

        <EditText
            android:id="@+id/edt_note_update_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/text_hint_note_title"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingHorizontal="8dp"
            android:text="@{note.title}"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup_note_update" />

        <EditText
            android:id="@+id/edt_note_update_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@null"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:lineSpacingMultiplier="1.5"
            android:paddingHorizontal="8dp"
            android:text="@{note.content}"
            android:textColor="@color/text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_note_update_title"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>